--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -100,6 +100,8 @@
     justify-content: flex-start; /* Align content to the start */
     padding: 0; /* Remove padding from the section */
     margin: 0; /* Remove any default margin */
+    margin-top: 7%;
+
     width: 100%; /* Ensure full width */
   }
   .active-image {
