--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -632,7 +632,9 @@ height:50vh
     .wave-overlay {
       position: absolute;
       top: 70%;
-      left: 0;
+      right: 0;
+      z-index: 60;
+      width: 70%;
   
   
     }
@@ -775,8 +777,8 @@ height:50vh
 
     .card {
       flex: 0 0 auto;
-      width: 100%;
-      height: 20%;
+      width: 50%;
+      height: auto;
       background-color: #19875a;
       color: white;
       display: flex;
@@ -784,7 +786,6 @@ height:50vh
       font-size: 1rem;
       font-weight: bold;
       text-align: center;
-      /* border: 2px solid #cfa256; */
       overflow: hidden;
       box-shadow: 0 4px 8px rgba(241, 4, 4, 0.2);
       position: relative;
