--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -499,7 +499,7 @@ height:50vh
   top: 0;
   right: 0;
   height: 100%;
-  width: 40vw;
+  width: 100vw;
   background-color: rgba(0, 0, 0); /* Semi-transparent black background */
   color: white;
   padding: 100px 20px 20px 20px; /* Add top padding to move items lower */
@@ -535,12 +535,13 @@ height:50vh
 /* Mobile Menu Expanded Background */
 .menu-background {
   position: absolute;
-  top: 0;
-  left: 0;
+  top:-1%;
+  right: 0;
   width: 100%;
   height: 100%;
   z-index: 0; /* Ensure it appears behind menu items */
   overflow: hidden; /* Prevent overflow */
+  z-index: -1;
 }
 
 .menu-glitter-image {
@@ -548,9 +549,11 @@ height:50vh
   height: 100%; /* Cover the full height of the menu */
   object-fit: cover; /* Ensure the image scales properly */
   opacity: 0.5; /* Optional: Add transparency for better blending */
-  height: 100px;
-  width: auto;
+
+  width: 100%;
+  height: auto;
   right:0;
+  transform: rotate(10deg);
 
 
 }
