--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -525,7 +525,7 @@ height:50vh
   padding: 10px;
   transition: color 0.3s ease;
   background-color: #cfa256;
-  border-radius: 10%;
+  /* border-radius: 10%; */
 }
 
 .mobile-menu a:hover {
