--- a/src/app/Usage/styles.css
+++ b/src/app/Usage/styles.css
@@ -55,6 +55,19 @@
   flex-direction: column;
   gap: 10px;
 } 
+.sidebar-icon3 {
+  color: aliceblue;
+  cursor: pointer;
+  /* opacity: 0.7; */
+  position: absolute;
+  left: 24%;
+  top: 50px;
+  /* transform: translateY(-50%); */
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  margin-bottom: 200px;
+} 
 .sidebar-icon2 {
   color: aliceblue;
   cursor: pointer;
@@ -66,7 +79,9 @@
   display: flex;
   flex-direction: column;
   gap: 1px;
+  margin-bottom: 200px;
 } 
+
 /* 
 .sidebar-icon.active {
   opacity: 1;
@@ -286,15 +301,22 @@
   transform: scale(1.1);
 }
 .course2{
-  margin-top: 450px;
+  margin-top: 5%;
 }
 .course3{
-  margin-top: 800px;
+  margin-top: 30%;
 }
+
 
 
 /* Mobile View Adjustments */
 @media (max-width: 768px) {
+  .course2{
+    margin-top: 5%;
+  }
+  .course3{
+    margin-top: 90vh;
+  }
   .background-container {
     background: linear-gradient(to bottom, black, #19875A); /* Linear gradient */
     height: 100vh; /* Full viewport height */
@@ -322,6 +344,19 @@
 
   }
   .sidebar-icon2 {
+    color: aliceblue;
+    cursor: pointer;
+    /* opacity: 0.7; */
+    position: absolute;
+    left: 12%;
+    top: 25px;
+    /* transform: translateY(-50%); */
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+    font-size: 1.3em;
+  } 
+  .sidebar-icon3 {
     color: aliceblue;
     cursor: pointer;
     /* opacity: 0.7; */
