--- a/src/app/Usage/styles.css
+++ b/src/app/Usage/styles.css
@@ -311,6 +311,23 @@
 
 /* Mobile View Adjustments */
 @media (max-width: 768px) {
+  .sidebar {
+    background-color: #000000;
+    position: fixed; /* Changed to fixed */
+    left: 0px;
+    /* transform: translateY(-50%); */
+    display: flex;
+    flex-direction: row;
+    gap: 12%;
+    bottom: 0px;
+    width: 100vw;
+    height: 5%;
+    z-index: 100;
+    align-items: center; /* Vertically centers the content */
+    justify-content: center;
+
+  }
+
   .course2{
     margin-top: 5%;
   }
@@ -399,7 +416,7 @@
 
   .top-right-image,
   .rect-image,
-  .sidebar,
+  /* .sidebar, */
   /* .sidebar-icon1, */
   /* .sidebar-icon2, */
   /* .course-card, */
