--- a/src/app/Community/styles.css
+++ b/src/app/Community/styles.css
@@ -181,3 +181,53 @@
     margin-bottom: 10px;
     color: white;
   }
+
+
+  /* Mobile View Adjustments */
+@media (max-width: 768px) {
+  .left-div {
+    position: absolute;
+    left:-2px;
+    top: 50px;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    width: 101vw;
+    height: 100vh;
+    border: 1px solid #19875a;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  .sidebar {
+    background-color: #000000;
+    position: fixed; /* Changed to fixed */
+    left: 0px;
+    /* transform: translateY(-50%); */
+    display: flex;
+    flex-direction: row;
+    gap: 12%;
+    bottom: 0px;
+    width: 100vw;
+    height: 7%;
+    z-index: 100;
+    align-items: center; /* Vertically centers the content */
+    justify-content: center;
+
+  }
+  /* .sidebar, */
+  .top-right-image,
+  .chat-panel,
+  /* .rect-image, */
+  /* .left-div, */
+  .sidebar-icon2 {
+    display: none !important; /* Hide all elements except the background */
+  }
+
+  .background-container {
+    display: block; /* Ensure the background remains visible */
+    background-color: #000000; /* Ensure background color remains */
+    height: 100vh; /* Full height for the background */
+    width: 100%; /* Full width for the background */
+  }
+}
