--- a/src/app/Community/styles.css
+++ b/src/app/Community/styles.css
@@ -195,6 +195,12 @@
 
   /* Mobile View Adjustments */
 @media (max-width: 768px) {
+  .group-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: -5vh;
+  }
   .bottom-left-image {
     position: absolute;
     bottom: 50px; /* Align to the bottom */
