--- a/src/app/Community/styles.css
+++ b/src/app/Community/styles.css
@@ -200,6 +200,7 @@
     flex-direction: column;
     gap: 10px;
     margin-top: -5vh;
+    left: 0px;
   }
   .bottom-left-image {
     position: absolute;
@@ -282,7 +283,7 @@
   .white-container {
     position: absolute;
     top: 0;
-    left: -55vw; /* Start adjacent to the contracted left-div */
+    left: -63vw; /* Start adjacent to the contracted left-div */
     height: 100vh;
     width: 80vw;
     background-color: rgba(0, 0, 0, 0.2); 
@@ -296,7 +297,6 @@
     /* transition: transform 3s ease-in-out;  */
     transition:0.7s ease-in-out; /* Smooth sliding animation */
     border: 1px solid #19875a;
-
 
   }
   
@@ -338,11 +338,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 15px;
     background-color: #222;
     border-radius: 10px;
     cursor: pointer;
     color: #888;
+    left: -100px;
   }  
 
 .group-item span {
